# parkour-analyzer

./: README.md
parkour-tauri/: README.md  index.html  package.json
parkour-tauri/src/: App.jsx
parkour-tauri/src-tauri/: Cargo.toml  tauri.conf.json
parkour-tauri/src-tauri/capabilities/: default.json
parkour-tauri/src-tauri/icons/: icon.icns
parkour-tauri/src-tauri/src/: lib.rs  main.rs
