[package]
name = "parkour-analyzer"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "parkour_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
